prepared app for using with inMemoryRepository on maps